--- a/论文精读/48.InstructGPT 论文精读.md
+++ b/论文精读/48.InstructGPT 论文精读.md
@@ -1,1 +1,3 @@
 https://www.bilibili.com/video/BV1hd4y187CR/?spm_id_from=333.788&vd_source=bbca381483664de7941cac6af725c6df
+
+Training language models to follow instructions with human feedback
