--- a/论文精读/48.InstructGPT 论文精读.md
+++ b/论文精读/48.InstructGPT 论文精读.md
@@ -1,3 +1,10 @@
 https://www.bilibili.com/video/BV1hd4y187CR/?spm_id_from=333.788&vd_source=bbca381483664de7941cac6af725c6df
 
 Training language models to follow instructions with human feedback
+
+语言模型的数据很杂，你不知道什么样的数据有效，同时你也很难控制整个模型的好坏
+
+1.有效性
+或者说时效性，如果数据集不是实时更新或者在线，那么没办法进行即时信息的反馈
+
+2.安全性
