--- a/论文精读/48.InstructGPT 论文精读.md
+++ b/论文精读/48.InstructGPT 论文精读.md
@@ -5,7 +5,10 @@ Training language models to follow instructions with human feedback
 语言模型的数据很杂，你不知道什么样的数据有效，同时你也很难控制整个模型的好坏
 
 1.有效性
+
 文本里没有的东西，模型很难学会
 （或者说时效性，如果数据集不是实时更新或者在线，那么没办法进行即时信息的反馈）
 
 2.安全性
+
+模型输出的内容应当安全，避免危险内容
