--- a/论文精读/48.InstructGPT 论文精读.md
+++ b/论文精读/48.InstructGPT 论文精读.md
@@ -1,5 +1,7 @@
 https://www.bilibili.com/video/BV1hd4y187CR/?spm_id_from=333.788&vd_source=bbca381483664de7941cac6af725c6df
 
+Align:对一下（工作）
+
 Training language models to follow instructions with human feedback
 
 语言模型的数据很杂，你不知道什么样的数据有效，同时你也很难控制整个模型的好坏
@@ -12,3 +14,5 @@ Training language models to follow instructions with human feedback
 2.安全性
 
 模型输出的内容应当安全，避免危险内容
+
+
