--- a/论文精读/48.InstructGPT 论文精读.md
+++ b/论文精读/48.InstructGPT 论文精读.md
@@ -15,4 +15,6 @@ Training language models to follow instructions with human feedback
 
 模型输出的内容应当安全，避免危险内容
 
+首先标一个数据，把问题和答案都写出来，训练了一个模型。
 
+又做了一个排序的数据集，排序的内容是模型的各种输出，用使用人类反馈的强化学习去训练一个模型
