--- a/论文精读/48.InstructGPT 论文精读.md
+++ b/论文精读/48.InstructGPT 论文精读.md
@@ -1,4 +1,8 @@
-https://www.bilibili.com/video/BV1hd4y187CR/?spm_id_from=333.788&vd_source=bbca381483664de7941cac6af725c6df
+https://www.bilibili.com/video/BV1AF411b7xQ/
+
+家人们先看一下GPT的前几篇内容吧
+
+https://www.bilibili.com/video/BV1hd4y187CR/
 
 Align:对一下（工作）
 
