--- a/arxiv每日思路/思路.md
+++ b/arxiv每日思路/思路.md
@@ -1,4 +1,5 @@
-# PKU-GoodsAD: A Supermarket Goods Dataset for Unsupervised Anomaly Detection and Segmentation
+## 2023年7月
+### PKU-GoodsAD: A Supermarket Goods Dataset for Unsupervised Anomaly Detection and Segmentation
 构建了一个关于超市商品的数据集，并且包含完整商品和“损伤”商品的内容。
 
 使用三大类方式进行测试，
