--- a/arxiv每日思路/思路.md
+++ b/arxiv每日思路/思路.md
@@ -1,5 +1,8 @@
 ## 2023年7月
 ### PKU-GoodsAD: A Supermarket Goods Dataset for Unsupervised Anomaly Detection and Segmentation
+
+https://arxiv.org/pdf/2307.04956v1.pdf
+
 构建了一个关于超市商品的数据集，并且包含完整商品和“损伤”商品的内容。
 
 使用三大类方式进行测试，
@@ -9,3 +12,5 @@
 2）基于异常点
 
 3）基于生成式模型
+
+最终对上述所有方法进行比较，最终得出结论，PatchCore方法效果最好
