--- a/arxiv每日思路/思路.md
+++ b/arxiv每日思路/思路.md
@@ -16,6 +16,9 @@ https://arxiv.org/pdf/2307.04956v1.pdf
 最终对上述所有方法进行比较，最终得出结论，PatchCore方法效果最好
 
 ### Q-YOLO: Efficient Inference for Real-time Object Detection
+
+extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2307.04816v1.pdf
+
 ### 量化
 
 量化并不是什么新知识，我们在对图像做预处理时就用到了量化。回想一下，我们通常会将一张 uint8 类型、数值范围在 0~255 的图片归一成 float32 类型、数值范围在 0.0~1.0 的张量，这个过程就是反量化。类似地，我们经常将网络输出的范围在 0.0~1.0 之间的张量调整成数值为 0~255、uint8 类型的图片数据，这个过程就是量化。所以量化本质上只是对数值范围的重新调整，可以「粗略」理解为是一种线性映射。(之所以加「粗略」二字，是因为有些论文会用非线性量化，但目前在工业界落地的还都是线性量化，所以本文只讨论线性量化的方案)。
