--- a/arxiv每日思路/思路.md
+++ b/arxiv每日思路/思路.md
@@ -24,3 +24,11 @@ extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=htt
 https://zhuanlan.zhihu.com/p/149659607
 
 量化并不是什么新知识，我们在对图像做预处理时就用到了量化。回想一下，我们通常会将一张 uint8 类型、数值范围在 0\~255 的图片归一成 float32 类型、数值范围在 0.0\~1.0 的张量，这个过程就是反量化。类似地，我们经常将网络输出的范围在 0.0\~1.0 之间的张量调整成数值为 0\~255、uint8 类型的图片数据，这个过程就是量化。所以量化本质上只是对数值范围的重新调整，可以「粗略」理解为是一种线性映射。(之所以加「粗略」二字，是因为有些论文会用非线性量化，但目前在工业界落地的还都是线性量化，所以本文只讨论线性量化的方案)。
+
+PTQ模型是指“Post Training Quantization”的缩写，它是一种用于对神经网络进行量化的技术。量化是指将浮点数模型参数转化为定点数表示的过程，可以显著减少模型的内存占用和计算量，从而提高模型在移动设备和嵌入式系统上的部署效率。
+
+在PTQ模型中，首先使用浮点数模型进行训练，得到经过训练优化的模型。然后，通过对训练后的模型进行量化，将模型中的浮点数参数转换为较低精度的定点数表示。通常情况下，常用的量化方法包括对权重进行缩放和截断，以及对激活函数进行近似等。
+
+量化后的模型可以在硬件上更高效地执行，因为定点数能够节省内存带宽和计算资源。然而，由于量化引入了信息损失，所以在进行量化之前需要仔细考虑量化策略，以平衡模型的精度和性能。一般情况下，需要在保持模型准确性的前提下，尽量降低量化引入的误差。
+
+总之，PTQ模型是一种通过量化神经网络，将浮点数表示转换为定点数表示的技术，以提高模型在移动设备和嵌入式系统上的部署效率。
