--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -35,3 +35,15 @@ PTQ模型是指“Post Training Quantization”的缩写，它是一种用于对
 量化后的模型可以在硬件上更高效地执行，因为定点数能够节省内存带宽和计算资源。然而，由于量化引入了信息损失，所以在进行量化之前需要仔细考虑量化策略，以平衡模型的精度和性能。一般情况下，需要在保持模型准确性的前提下，尽量降低量化引入的误差。
 
 总之，PTQ模型是一种通过量化神经网络，将浮点数表示转换为定点数表示的技术，以提高模型在移动设备和嵌入式系统上的部署效率。
+
+### 自监督学习
+
+https://zhuanlan.zhihu.com/p/184995155
+
+自监督学习（Self-supervised learning）是一种无需人工标注标签的机器学习方法，它通过自动生成训练目标或使用数据自身的内部关联来进行学习。相比监督学习需要大量标记的数据集，自监督学习可以更有效地利用未标记的数据。
+
+在自监督学习中，模型通过尝试解决一个自我设定的任务来学习表示。这个任务可以是对数据进行转换、预测缺失的部分、生成原始数据等等。通过让模型从数据中学习这些任务，可以让其学到有用的特征表示，同时也能提高模型在下游任务上的表现。
+
+举个例子，对于图像领域的自监督学习，可以通过将图像进行旋转、遮挡部分区域等方式来创建自我设定的任务。模型需要学会将旋转后的图像恢复到原始方向或者预测被遮挡的部分。通过这个过程，模型能够学习到图像中的语义信息和结构，并可以在下游任务（如图像分类、目标检测等）上产生更好的性能。
+
+自监督学习的优势在于不需要手动标注标签，可以利用大量未标记的数据，在许多领域都取得了很好的效果。它被广泛应用于计算机视觉、自然语言处理等领域，为机器学习提供了一种更加高效和灵活的学习范式。
