--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -48,6 +48,11 @@ https://zhuanlan.zhihu.com/p/184995155
 
 自监督学习的优势在于不需要手动标注标签，可以利用大量未标记的数据，在许多领域都取得了很好的效果。它被广泛应用于计算机视觉、自然语言处理等领域，为机器学习提供了一种更加高效和灵活的学习范式。
 
+### MiVOLO: Multi-input Transformer for Age and Gender Estimation
+extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2307.04616v1.pdf
+
+在2stage VOLO模型前面增加一个特征增强模块，使用的是cross attention，用k,v处理body，用q处理face。至于如何提取face信息，是用yolov8处理的
+
 ### Swin Transformer 模型
 Swin Transformer是一种用于图像处理的基于Transformer架构的深度学习模型。它在2021年由香港中文大学和senseTime公司共同提出，并在CVPR 2021上进行了发布。
 
