--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -4,6 +4,12 @@ extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=htt
 
 在2stage VOLO模型前面增加一个特征增强模块，使用的是cross attention，用k,v处理body，用q处理face。至于如何提取face信息，是用yolov8处理的
 
+### cross attention
+https://zhuanlan.zhihu.com/p/380016266
+
+### ViT
+https://zhuanlan.zhihu.com/p/385406085
+
 ### Swin Transformer 模型
 Swin Transformer是一种用于图像处理的基于Transformer架构的深度学习模型。它在2021年由香港中文大学和senseTime公司共同提出，并在CVPR 2021上进行了发布。
 
