--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -10,6 +10,19 @@ https://zhuanlan.zhihu.com/p/380016266
 ### ViT
 https://zhuanlan.zhihu.com/p/385406085
 
+### 知识蒸馏
+知识蒸馏（Knowledge Distillation）是一种模型压缩的技术，用于将一个复杂的“教师模型”中的知识转移到一个简化的“学生模型”。它的目标是通过利用教师模型的知识来提高学生模型的性能。
+
+在知识蒸馏中，通常有两个模型参与：教师模型和学生模型。教师模型可以是一个大型、复杂的模型，它在某个特定任务上取得了良好的性能。学生模型则是一个小型模型，它希望通过从教师模型中获得的知识来进行训练。
+
+知识的转移是通过教师模型的软标签来实现的。传统的监督学习是使用硬标签（one-hot编码）来指示每个样本的类别。而在知识蒸馏中，教师模型会输出概率分布，表示每个类别的概率。这些概率分布被称为软标签，它们包含了更多的类别之间的相对关系和模型的置信度，能够提供更丰富的信息。
+
+学生模型通过对教师模型的输出进行拟合，并结合硬标签的监督信号来进行训练。学生模型会努力模拟教师模型的输出，以便获得类似的预测能力。通过这种方式，学生模型可以从教师模型中受益，学习到教师模型的经验和知识，然后在更小的模型体积和计算复杂度下保持相似的性能。
+
+知识蒸馏在许多领域都取得了很好的效果，特别是在资源受限的环境下，如移动设备和嵌入式系统。它可以通过减少模型的大小、参数和计算量，提高模型的推理速度和存储效率，同时仍然保持相对较高的性能。
+
+总之，知识蒸馏是一种通过将教师模型的知识传递给学生模型，实现模型压缩和效率提升的技术。它是利用教师模型作为指导来训练学生模型的一种有效方式，可以在资源受限的场景中提供高性能和高效率的解决方案。
+
 ### Swin Transformer 模型
 Swin Transformer是一种用于图像处理的基于Transformer架构的深度学习模型。它在2021年由香港中文大学和senseTime公司共同提出，并在CVPR 2021上进行了发布。
 
