--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -7,6 +7,9 @@ extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=htt
 ### cross attention
 https://zhuanlan.zhihu.com/p/380016266
 
+### CAT: Cross Attention in Vision Transformer
+extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2106.05786.pdf
+
 ### ViT
 https://zhuanlan.zhihu.com/p/385406085
 
