--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -4,16 +4,16 @@ extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=htt
 
 在2stage VOLO模型前面增加一个特征增强模块，使用的是cross attention，用k,v处理body，用q处理face。至于如何提取face信息，是用yolov8处理的
 
-### cross attention
+### ※ Cross attention
 https://zhuanlan.zhihu.com/p/380016266
 
 ### CAT: Cross Attention in Vision Transformer
 extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2106.05786.pdf
 
-### ViT
+### ※ ViT
 https://zhuanlan.zhihu.com/p/385406085
 
-### 知识蒸馏
+### ※ 知识蒸馏
 知识蒸馏（Knowledge Distillation）是一种模型压缩的技术，用于将一个复杂的“教师模型”中的知识转移到一个简化的“学生模型”。它的目标是通过利用教师模型的知识来提高学生模型的性能。
 
 在知识蒸馏中，通常有两个模型参与：教师模型和学生模型。教师模型可以是一个大型、复杂的模型，它在某个特定任务上取得了良好的性能。学生模型则是一个小型模型，它希望通过从教师模型中获得的知识来进行训练。
