--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,10 +1,9 @@
 ### 按照流程走到这里 https://github.com/xArm-Developer/xarm_ros/blob/master/ReadMe_cn.md#7-xarm%E8%A7%86%E8%A7%89
     gedit ./xarm_vision/d435i_xarm_setup/launch/d435i_xarm_auto_calib.launch
 
-修改需要的地方
+修改需要的地方自行修改
 
     roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220
-
 
 ### 缺少各种包裹
     pip install pyqt5
