--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -5,6 +5,15 @@
 
     roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220
 
+正常的情况：会出现以下几个窗口
+
+1.rviz
+
+2.一个摄像头的画面
+
+3.rqt_easy_handeye的2个窗口
+
+
 ### 缺少各种包裹
     pip install pyqt5
     pip install pyside2
