--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -43,6 +43,8 @@ https://blog.csdn.net/a2824256/article/details/113127740
 
 https://blog.csdn.net/qq_38606680/article/details/129118491
 
+具体标定的流程，rqt_easy_handeye使用方法：
 
+https://zhuanlan.zhihu.com/p/92339362
 
     
