--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -47,4 +47,11 @@ https://blog.csdn.net/qq_38606680/article/details/129118491
 
 https://zhuanlan.zhihu.com/p/92339362
 
+    手动调节机械臂，使 aruco 二维码移动至相机视野中心处附近，作为 home config。在界面 3 中，点击 check starting pose，若检查成功，界面会出现： 0/17，ready to start
+    界面 3 中依次点击 Next Pose，Plan，Execute，机械臂会移动至新的位置，若二维码在相机视野范围内，且能检测成功，则进行下一步
+    界面 2 中点击 Take Sample，若 Samples 对话框中出现有效信息，说明第一个点标定成功
+    重复执行步骤 2 和步骤 3，直至 17 个点全部标定完毕
+    界面 2 中点击 Compute，则 Result 对话框中会出现结果
+    界面 2 中 Save，会将结果保存为一个 YAML 文件，路径为 ~/.ros/easy_handeye
+
     
