--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -1,4 +1,13 @@
 ## 2023年7月
+### GENERAL-PURPOSE MULTI-MODAL OOD DETECTION FRAMEWORK
+extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2307.13069v1.pdf
+
+提出OOD，解决三个问题：我们关注三种不同的面向对象的多感官数据场景: (1)未对齐的数据样本对，例如，一个在分布(ID)图像与其文本信息不对齐; (2)从一个新的领域收集的数据样本对，例如，来自一个新的环境与一个不同的训练分布的对齐的图像和文本; (3)数据样本中存在噪声。
+
+在本文中，我们提出了一种弱监督的多模态面向对象的检测模型。如图2所示，所提出的 WOOD 模型由两部分组成: 一个二进制分类器用于分类面向对象的样本和一个对比学习模块用于测量多种数据模式之间的相似性得分。在对比学习方面，我们采用铰链损失最大化 ID 样本的相似度分数，最小化 OOD 样本的相似度分数，以便更好地区分它们。在二进制分类器方面，我们开发了一个特征稀疏正则化器，以更好地整合来自多模态数据的重要特征。然后设计了一个新的评分指标来融合这两个部分的预测结果。最后，我们在三个真实世界的基准数据集上对所提出的 WOOD 模型进行了评估。实验结果表明，该方法可以同时检测三种不同场景下的 OOD 样本，其性能明显优于基于 CLIP 的基线
+
+
+
 ### MiVOLO: Multi-input Transformer for Age and Gender Estimation
 extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2307.04616v1.pdf
 
