--- a/arxiv每日思路/23.7思路.md
+++ b/arxiv每日思路/23.7思路.md
@@ -1,4 +1,11 @@
 ## 2023年7月
+
+### PourIt!: Weakly-supervised Liquid Perception from a Single Image for Visual Closed-Loop Robotic Pouring 2023 ICCV
+https://hetolin.github.io/PourIt/
+
+
+
+
 ### GENERAL-PURPOSE MULTI-MODAL OOD DETECTION FRAMEWORK
 extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2307.13069v1.pdf
 
