--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -54,4 +54,5 @@ https://zhuanlan.zhihu.com/p/92339362
     界面 2 中点击 Compute，则 Result 对话框中会出现结果
     界面 2 中 Save，会将结果保存为一个 YAML 文件，路径为 ~/.ros/easy_handeye
 
+上面，有可能会导致二维码不在相机视野范围内，此时取消自动，自己手动进行take sample。搞满17个就行。
     
