--- a/arxiv每日思路/23.8 思路.md
+++ b/arxiv每日思路/23.8 思路.md
@@ -1,1 +1,4 @@
+## 8 月
+### SE(3)-DiffusionFields: Learning smooth cost functions for joint grasp and motion optimization through diffusion
 
+extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2209.03855.pdf
