--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -3,7 +3,9 @@
 
 修改需要的地方自行修改
 
-    roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220
+    roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220 marker_size:=0.1 marker_id:=582
+
+注意：这里的mark_id请选择original下的，这样打印出来的id和下文当中摄像头画面里面的显示的id的数值是一样的。如果不选择original，那么请在marker_id那里设置成摄像头画面里面显示的数字。
 
 正常的情况：会出现以下几个窗口
 
@@ -56,3 +58,4 @@ https://zhuanlan.zhihu.com/p/92339362
 
 上面，有可能会导致二维码不在相机视野范围内，此时取消自动，自己手动进行take sample。搞满17个就行。
     
+注意：手动操作需要同步rviz中的机械臂信息，不能直接使用ip登录机械臂后台进行操作或者使用studio进行操控，可以选择使用rviz中的move planing进行操作（非常麻烦，需要耐心，最少10个点位）
