--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,11 +1,26 @@
 ### 按照流程走到这里 https://github.com/xArm-Developer/xarm_ros/blob/master/ReadMe_cn.md#7-xarm%E8%A7%86%E8%A7%89
-    gedit ./xarm_vision/d435i_xarm_setup/launch/d435i_xarm_auto_calib.launch
 
 修改需要的地方自行修改
 
     roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220 marker_size:=0.1 marker_id:=582
 
-注意：这里的mark_id请选择original下的，这样打印出来的id和下文当中摄像头画面里面的显示的id的数值是一样的。如果不选择original，那么请在marker_id那里设置成摄像头画面里面显示的数字。
+注意：
+
+1.这里的mark_id请选择original下的，这样打印出来的id和下文当中摄像头画面里面的显示的id的数值是一样的。如果不选择original，那么请在marker_id那里设置成摄像头画面里面显示的数字。
+
+2.关于IP地址等的修改，可以在文件里面修改，也可以直接传参数，像上面的那行命令
+
+        gedit ./xarm_vision/d435i_xarm_setup/launch/d435i_xarm_auto_calib.launch
+
+最开始的这里
+
+        <launch>
+            <arg name="namespace_prefix" default="xarm_realsense_handeyecalibration" />
+            <arg name="robot_ip" doc="The IP address of the xarm robot" />
+            <arg name="robot_dof" doc="The degree of freedom of the xarm" />
+            <!-- PLEASE USE THE PROPER MARKER CONFIGURATION ! -->
+            <arg name="marker_size" doc="Size of the ArUco marker used, in meters" default="0.05" />
+            <arg name="marker_id" doc="The ID of the ArUco marker used" default="0"/>
 
 正常的情况：会出现以下几个窗口
 
