--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,7 +1,8 @@
 ### 按照流程走到这里 https://github.com/xArm-Developer/xarm_ros/blob/master/ReadMe_cn.md#7-xarm%E8%A7%86%E8%A7%89
 
-修改需要的地方自行修改
+需要的地方自行修改
 
+    conda activate ros
     roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220 marker_size:=0.1 marker_id:=582
 
 注意：
@@ -21,6 +22,7 @@
             <!-- PLEASE USE THE PROPER MARKER CONFIGURATION ! -->
             <arg name="marker_size" doc="Size of the ArUco marker used, in meters" default="0.05" />
             <arg name="marker_id" doc="The ID of the ArUco marker used" default="0"/>
+
 
 正常的情况：会出现以下几个窗口
 
