--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -32,7 +32,6 @@
 
 3.rqt_easy_handeye的2个窗口
 
-
 ### 缺少各种包裹
     pip install pyqt5
     pip install pyside2
@@ -47,7 +46,6 @@ https://blog.csdn.net/a2824256/article/details/113127740
 
 解决方案：降低conda内的python版本到最好3.8.10！！！！【这样不用解决后面的问题】，建议在执行下面的操作前，使用conda list并保存虚拟环境中安装的所有包裹
 
-
 查询python版本
 
     python -V
@@ -58,7 +56,7 @@ https://blog.csdn.net/a2824256/article/details/113127740
 
 会自动安装3.8.17，此时对照之前的conda list的结果，安装需要的所有包裹
 
-那么会出现Conda虚拟环境下libp11-kit.so.0: undefined symbol: ffi_type_pointer...问题
+### 那么会出现Conda虚拟环境下libp11-kit.so.0: undefined symbol: ffi_type_pointer...问题
 
 https://blog.csdn.net/qq_38606680/article/details/129118491
 
