--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -73,4 +73,6 @@ https://zhuanlan.zhihu.com/p/92339362
 
 上面，有可能会导致二维码不在相机视野范围内，此时取消自动，自己手动进行take sample。搞满17个就行。
     
-注意：手动操作需要同步rviz中的机械臂信息，不能直接使用ip登录机械臂后台进行操作或者使用studio进行操控，可以选择使用rviz中的move planing进行操作（非常麻烦，需要耐心，最少10个点位）
+注意：手动操作需要同步rviz中的机械臂信息，不能直接使用ip登录机械臂后台进行操作或者使用studio进行操控，可以选择使用rviz中的move planing进行操作（非常麻烦，需要耐心，最少10个点位），推测easy_handeye使用rviz中的机械臂数据进行hand->world的采样，但camera->marker是借由aruco和相机本身进行的。
+
+(以后可以补充，是否有方法直接同步2个信息呢？)
