--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -32,6 +32,20 @@
 
 3.rqt_easy_handeye的2个窗口
 
+### 快速解释一下这个launch文件做了什么：
+
+1.启动realsense，也就是相机
+
+2.启动aruco，它是确定相机与marker的相对坐标系的，这里不需要动
+
+3.启动机械臂（这里没开rviz，是因为easy_handeye部分会自动开启）
+    
+    gedit ~/ros/realsense_ws/src/xarm_ros/xarm6_moveit_config/launch/realMove_exec.launch
+
+4.启动easy_handeye
+
+    gedit ~/ros/realsense_ws/src/easy_handeye/easy_handeye/launch/calibrate.launch
+
 ### 缺少各种包裹
     pip install pyqt5
     pip install pyside2
