--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -36,15 +36,17 @@
 
 1.启动realsense，也就是相机
 
-2.启动aruco，它是确定相机与marker的相对坐标系的，这里不需要动
+2.启动aruco，它是确定相机与marker的相对坐标系的，这里不需要动，那些frame的value本质上是你给他们取的名字，不用担心
 
 3.启动机械臂（这里没开rviz，是因为easy_handeye部分会自动开启）
     
     gedit ~/ros/realsense_ws/src/xarm_ros/xarm6_moveit_config/launch/realMove_exec.launch
 
-4.启动easy_handeye
+4.启动easy_handeye，这里的4个frame需要和aruco里面对应
 
     gedit ~/ros/realsense_ws/src/easy_handeye/easy_handeye/launch/calibrate.launch
+
+## 遇到的问题
 
 ### 缺少各种包裹
     pip install pyqt5
