--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,3 +1,4 @@
+## 准备launch标定文件
 ### 按照流程走到这里 https://github.com/xArm-Developer/xarm_ros/blob/master/ReadMe_cn.md#7-xarm%E8%A7%86%E8%A7%89
 
 需要的地方自行修改
@@ -48,11 +49,11 @@
 
 ## 遇到的问题
 
-### 缺少各种包裹
+### 1.缺少各种包裹
     pip install pyqt5
     pip install pyside2
 
-### ROS查看节点图rqt_graph报错ValueError: PyCapsule_GetPointer called with incorrect name
+### 2.ROS查看节点图rqt_graph报错ValueError: PyCapsule_GetPointer called with incorrect name
 
 https://blog.csdn.net/a2824256/article/details/113127740
 
@@ -72,10 +73,11 @@ https://blog.csdn.net/a2824256/article/details/113127740
 
 会自动安装3.8.17，此时对照之前的conda list的结果，安装需要的所有包裹
 
-### 那么会出现Conda虚拟环境下libp11-kit.so.0: undefined symbol: ffi_type_pointer...问题
+### 3.那么会出现Conda虚拟环境下libp11-kit.so.0: undefined symbol: ffi_type_pointer...问题
 
 https://blog.csdn.net/qq_38606680/article/details/129118491
 
+## 标定过程
 具体标定的流程，rqt_easy_handeye使用方法：
 
 https://zhuanlan.zhihu.com/p/92339362
