--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,4 +1,15 @@
 ## 准备launch标定文件
+## 简单讲讲标定原理
+手眼标定的目的，是为了知道摄像头相对于机械臂末端（可以是爪子，吸盘，etc）的相对位置（相对坐标）
+
+总共有4个坐标系frame，分别是机械臂根部，机械臂末端，摄像头，标记，我们需要知道机械臂末端和摄像头之间的相对关系，根部和标记是固定的，那么三个相对位置，2个是变化的，
+
+变化的：根部-末端，摄像头-标记
+
+固定的：摄像头-末端
+
+本质是解方程AX=XB，所以需要多次采样获取A和B，而X就是固定的转移矩阵
+
 ### 按照流程走到这里 https://github.com/xArm-Developer/xarm_ros/blob/master/ReadMe_cn.md#7-xarm%E8%A7%86%E8%A7%89
 
 需要的地方自行修改
