--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,5 +1,5 @@
 ## 准备launch标定文件
-## 简单讲讲标定原理
+### 简单讲讲标定原理
 手眼标定的目的，是为了知道摄像头相对于机械臂末端（可以是爪子，吸盘，etc）的相对位置（相对坐标）
 
 总共有4个坐标系frame，分别是机械臂根部，机械臂末端，摄像头，标记，我们需要知道机械臂末端和摄像头之间的相对关系，根部和标记是固定的，那么三个相对位置，2个是变化的，
