--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -90,6 +90,8 @@ https://blog.csdn.net/a2824256/article/details/113127740
 
 https://blog.csdn.net/qq_38606680/article/details/129118491
 
+### 关于2的解决办法比较有限，最终依然会有报错，但是只要在执行launch文件后，终端显示you can plan it now，就说明可以了
+
 ## 标定过程
 具体标定的流程，rqt_easy_handeye使用方法：
 
