--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -38,11 +38,11 @@
 
 正常的情况：会出现以下几个窗口
 
-1.rviz
+- 1.rviz
 
-2.一个摄像头的画面
+- 2.一个摄像头的画面
 
-3.rqt_easy_handeye的2个窗口
+- 3.rqt_easy_handeye的2个窗口
 
 ### 快速解释一下这个launch文件做了什么：
 
