--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -1,4 +1,5 @@
-## 准备launch标定文件
+# 使用easy_handeye对xarm + rs d435i进行手眼标定
+## 一、准备launch标定文件
 ### 简单讲讲标定原理
 手眼标定的目的，是为了知道摄像头相对于机械臂末端（可以是爪子，吸盘，etc）的相对位置（相对坐标）
 
@@ -48,19 +49,19 @@
 
 https://blog.csdn.net/weixin_45245063/article/details/117412567
 
-1.启动realsense，也就是相机
+- 1.启动realsense，也就是相机
 
-2.启动aruco，它是确定相机与marker的相对坐标系的，这里不需要动，那些frame的value本质上是你给他们取的名字，不用担心
+- 2.启动aruco，它是确定相机与marker的相对坐标系的，这里不需要动，那些frame的value本质上是你给他们取的名字，不用担心
 
-3.启动机械臂（这里没开rviz，是因为easy_handeye部分会自动开启）
+- 3.启动机械臂（这里没开rviz，是因为easy_handeye部分会自动开启）
     
-    gedit ~/ros/realsense_ws/src/xarm_ros/xarm6_moveit_config/launch/realMove_exec.launch
+        gedit ~/ros/realsense_ws/src/xarm_ros/xarm6_moveit_config/launch/realMove_exec.launch
 
-4.启动easy_handeye，这里的4个frame需要和aruco里面对应
+- 4.启动easy_handeye，这里的4个frame需要和aruco里面对应
 
-    gedit ~/ros/realsense_ws/src/easy_handeye/easy_handeye/launch/calibrate.launch
+        gedit ~/ros/realsense_ws/src/easy_handeye/easy_handeye/launch/calibrate.launch
 
-## 遇到的问题
+## 二、遇到的问题
 
 ### 1.缺少各种包裹
     pip install pyqt5
@@ -74,11 +75,11 @@ https://blog.csdn.net/a2824256/article/details/113127740
 
 但是无论怎样尝试，最终都不能找到合适的版本，会出现sip的版本要求非常苛刻的情况
 
-解决方案：降低conda内的python版本到最好3.8.10！！！！【这样不用解决后面的问题】，建议在执行下面的操作前，使用conda list并保存虚拟环境中安装的所有包裹
+- **解决方案**：降低conda内的python版本到最好3.8.10！！！！【这样不用解决后面的问题】，建议在执行下面的操作前，使用conda list并保存虚拟环境中安装的所有包裹
 
-查询python版本
+- 查询python版本
 
-    python -V
+        python -V
 
 如果只是降低到3.8
 
