--- a/problem/手眼标定 报错.md
+++ b/problem/手眼标定 报错.md
@@ -5,9 +5,9 @@
 
 总共有4个坐标系frame，分别是机械臂根部，机械臂末端，摄像头，标记，我们需要知道机械臂末端和摄像头之间的相对关系，根部和标记是固定的，那么三个相对位置，2个是变化的，
 
-变化的：根部-末端，摄像头-标记
+- 变化的：根部-末端，摄像头-标记
 
-固定的：摄像头-末端
+- 固定的：摄像头-末端
 
 本质是解方程AX=XB，所以需要多次采样获取A和B，而X就是固定的转移矩阵
 
@@ -18,7 +18,7 @@
     conda activate ros
     roslaunch d435i_xarm_setup d435i_xarm_auto_calib.launch robot_dof:=6 robot_ip:=192.168.1.220 marker_size:=0.1 marker_id:=582
 
-注意：
+- 注意：
 
 1.这里的mark_id请选择original下的，这样打印出来的id和下文当中摄像头画面里面的显示的id的数值是一样的。如果不选择original，那么请在marker_id那里设置成摄像头画面里面显示的数字。
 
@@ -71,13 +71,13 @@ https://blog.csdn.net/weixin_45245063/article/details/117412567
 
 https://blog.csdn.net/a2824256/article/details/113127740
 
-省流：pyqt5版本高了
+**省流**：pyqt5版本高了
 
 但是无论怎样尝试，最终都不能找到合适的版本，会出现sip的版本要求非常苛刻的情况
 
-- **解决方案**：降低conda内的python版本到最好3.8.10！！！！【这样不用解决后面的问题】，建议在执行下面的操作前，使用conda list并保存虚拟环境中安装的所有包裹
+- **【解决方案】**：降低conda内的python版本到最好3.8.10！！！！【这样不用解决后面的问题】，建议在执行下面的操作前，使用conda list并保存虚拟环境中安装的所有包裹
 
-- 查询python版本
+查询python版本
 
         python -V
 
@@ -93,20 +93,25 @@ https://blog.csdn.net/qq_38606680/article/details/129118491
 
 ### 关于2的解决办法比较有限，最终依然会有报错，但是只要在执行launch文件后，终端显示you can plan it now，就说明可以了
 
-## 标定过程
+## 三、标定过程
 具体标定的流程，rqt_easy_handeye使用方法：
 
 https://zhuanlan.zhihu.com/p/92339362
 
-    手动调节机械臂，使 aruco 二维码移动至相机视野中心处附近，作为 home config。在界面 3 中，点击 check starting pose，若检查成功，界面会出现： 0/17，ready to start
-    界面 3 中依次点击 Next Pose，Plan，Execute，机械臂会移动至新的位置，若二维码在相机视野范围内，且能检测成功，则进行下一步
-    界面 2 中点击 Take Sample，若 Samples 对话框中出现有效信息，说明第一个点标定成功
-    重复执行步骤 2 和步骤 3，直至 17 个点全部标定完毕
-    界面 2 中点击 Compute，则 Result 对话框中会出现结果
-    界面 2 中 Save，会将结果保存为一个 YAML 文件，路径为 ~/.ros/easy_handeye
+> 1.手动调节机械臂，使 aruco 二维码移动至相机视野中心处附近，作为 home config。在界面 3 中，点击 check starting pose，若检查成功，界面会出现： 0/17，ready to start
+>
+> 2.界面 3 中依次点击 Next Pose，Plan，Execute，机械臂会移动至新的位置，若二维码在相机视野范围内，且能检测成功，则进行下一步
+> 
+> 3.界面 2 中点击 Take Sample，若 Samples 对话框中出现有效信息，说明第一个点标定成功
+> 
+> 4.重复执行步骤 2 和步骤 3，直至 17 个点全部标定完毕
+> 
+> 5.界面 2 中点击 Compute，则 Result 对话框中会出现结果
+> 
+> 6.界面 2 中 Save，会将结果保存为一个 YAML 文件，路径为 ~/.ros/easy_handeye
 
 上面，有可能会导致二维码不在相机视野范围内，此时取消自动，自己手动进行take sample。搞满17个就行。
     
-注意：手动操作需要同步rviz中的机械臂信息，不能直接使用ip登录机械臂后台进行操作或者使用studio进行操控，可以选择使用rviz中的move planing进行操作（非常麻烦，需要耐心，最少10个点位），推测easy_handeye使用rviz中的机械臂数据进行hand->world的采样，但camera->marker是借由aruco和相机本身进行的。
+- 注意：手动操作需要同步rviz中的机械臂信息，不能直接使用ip登录机械臂后台进行操作或者使用studio进行操控，可以选择使用rviz中的move planing进行操作（非常麻烦，需要耐心，最少10个点位），推测easy_handeye使用rviz中的机械臂数据进行hand->world的采样，但camera->marker是借由aruco和相机本身进行的。
 
 (以后可以补充，是否有方法直接同步2个信息呢？)
