--- a/arxiv每日思路/23.8 思路.md
+++ b/arxiv每日思路/23.8 思路.md
@@ -1,4 +1,12 @@
-## 8 月
-### SE(3)-DiffusionFields: Learning smooth cost functions for joint grasp and motion optimization through diffusion
+# 8 月
+## CLIPN for Zero-Shot OOD Detection: Teaching CLIP to Say No
+    extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2308.12213.pdf
 
-extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2209.03855.pdf
+- 目的：解决OOD检测问题
+- 模型的基础 A：zero-shot的clip，提供类别的名称即可分类。输入端：{图片}{可能的类别列表}，
+- 新加入的b："no" text encoder
+
+
+
+## SE(3)-DiffusionFields: Learning smooth cost functions for joint grasp and motion optimization through diffusion
+    extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2209.03855.pdf
