--- a/arxiv每日思路/23.8 思路.md
+++ b/arxiv每日思路/23.8 思路.md
@@ -6,7 +6,7 @@
 - 模型的基础 A：zero-shot的clip，提供类别的名称即可分类。输入端：{图片}{可能的类别列表}，
 - 新加入的b："no" text encoder
 
-Screenshot from 2023-08-30 08-38-22.png
+![image](https://github.com/Arcohyp/notes/tree/main/arxiv%E6%AF%8F%E6%97%A5%E6%80%9D%E8%B7%AF/pic/Screenshot from 2023-08-30 08-38-22.png)
 
 ## SE(3)-DiffusionFields: Learning smooth cost functions for joint grasp and motion optimization through diffusion
     extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2209.03855.pdf
