--- a/arxiv每日思路/23.8 思路.md
+++ b/arxiv每日思路/23.8 思路.md
@@ -3,10 +3,14 @@
     extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2308.12213.pdf
 
 - 目的：解决OOD检测问题
-- 模型的基础 A：zero-shot的clip，提供类别的名称即可分类。输入端：{图片}{可能的类别列表}，
+- 模型的基础 A：zero-shot的clip，提供类别的名称即可分类。输入端：{图片}{可能的类别列表}。
 - 新加入的b："no" text encoder
 
+冻住 image encoder和text encoder的参数，但训练“no” text encoder
 ![image](https://github.com/Arcohyp/notes/blob/main/arxiv%E6%AF%8F%E6%97%A5%E6%80%9D%E8%B7%AF/pic/Screenshot%20from%202023-08-30%2008-38-22.png)
+
+
+
 
 ## SE(3)-DiffusionFields: Learning smooth cost functions for joint grasp and motion optimization through diffusion
     extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2209.03855.pdf
