--- a/problem/再生龙备份系统.md
+++ b/problem/再生龙备份系统.md
@@ -3,7 +3,9 @@
 >
 > https://zhuanlan.zhihu.com/p/354584111
 
-按照流程执行即可
+按照流程执行即可，但第二个链接的2.（6）选择local-dev，结合第一个链接来看
+
+总的来说，就是前半部分看第一个链接，后半部分看第二个链接
 
 - 需要注意的事情：
 会被覆写的是2个，一个是U盘，用作再生龙系统的系统盘
