--- a/problem/再生龙备份系统.md
+++ b/problem/再生龙备份系统.md
@@ -3,16 +3,14 @@
 >
 > https://zhuanlan.zhihu.com/p/354584111
 >
-> https://blog.csdn.net/weixin_44092851/article/details/124634434
+> 【推荐】https://blog.csdn.net/weixin_44092851/article/details/124634434
 
 - 【**总的流程**】:
 1. 制作再生龙系统盘（不需要，因为已经制作完成，黑色套子的16G U盘）
 2. 将旧电脑的硬盘制作成镜像（备份）存储到外接硬盘（中间介质）
 3. 将外接硬盘（中间介质）的镜像（备份）覆盖到新电脑的硬盘上
 
-按照流程执行即可，但第二个链接的2.（6）选择local-dev，结合第一个链接来看
-
-总的来说，就是前半部分看第一个链接，后半部分看第二个链接。
+按照流程执行即可。
 
 - **需要注意的事情**：会被覆写的是2个，作为镜像（备份）存储的硬盘（中间介质）是不会被覆盖的
   - 一个是U盘，用作再生龙系统的系统盘（已经制作好了）
