--- a/arxiv每日思路/23.9.md
+++ b/arxiv每日思路/23.9.md
@@ -8,6 +8,13 @@
     extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2303.03378.pdf
 > https://www.connectedpapers.com/main/38fe8f324d2162e63a967a9ac6648974fc4c66f3/PaLM%20E%3A-An-Embodied-Multimodal-Language-Model/graph
 
+- 某人锐评，小demo来骗？
+
+> 然后呢？谷歌还不是把Everyday Robots给解散了。
+
+> 他们的文章里面的实验一部分都是toy problems,稍微复杂点的任务，基本就歇菜了，但是却有意无意暗示“通才”！至少视觉编码器就得针对特定任务进行训练。再加上他们也不开源（估计是不敢），所以其他团队根本没法评价比较他们的成果。
+
+> 现在的谷歌做AI就这种心态，只追求Demo漂亮水文章，怪不得bard翻车。
 
 
 
@@ -15,3 +22,6 @@
 
 [4] Sharma, Pratyusha, et al. “Correcting robot plans with natural language feedback.” arXiv preprint arXiv:2204.05186 (2022). 
 
+
+
+https://github.com/hpcaitech/ColossalAI/blob/main/docs/README-zh-Hans.md#%E5%8D%95GPU%E8%AE%AD%E7%BB%83%E6%A0%B7%E4%BE%8B%E5%B1%95%E7%A4%BA
