--- a/arxiv每日思路/23.9.md
+++ b/arxiv每日思路/23.9.md
@@ -1,9 +1,9 @@
 # 23.9
 > https://scholar.lanfanshu.cn/citations?hl=zh-CN&user=Vg54TcsAAAAJ&view_op=list_works&sortby=pubdate
 
-[1] Shen, Leixian, et al. “Towards natural language interfaces for data visualization: A survey.” IEEE transactions on visualization and computer graphics (2022).
+## [1] Shen, Leixian, et al. “Towards natural language interfaces for data visualization: A survey.” IEEE transactions on visualization and computer graphics (2022).
 
-[2] Driess, Danny, et al. “Palm-e: An embodied multimodal language model.” arXiv preprint arXiv:2303.03378 (2023).
+## [2] Driess, Danny, et al. “Palm-e: An embodied multimodal language model.” arXiv preprint arXiv:2303.03378 (2023).
 
     extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2303.03378.pdf
 > https://www.connectedpapers.com/main/38fe8f324d2162e63a967a9ac6648974fc4c66f3/PaLM%20E%3A-An-Embodied-Multimodal-Language-Model/graph
@@ -17,11 +17,14 @@
 >
 >> 现在的谷歌做AI就这种心态，只追求Demo漂亮水文章，怪不得bard翻车。
 
+## [3] Lin, Kevin, et al. “Text2motion: From natural language instructions to feasible plans.” arXiv preprint arXiv:2303.12153 (2023).
+
+    extension://idghocbbahafpfhjnfhpbfbmpegphmmp/assets/pdf/web/viewer.html?file=https%3A%2F%2Farxiv.org%2Fpdf%2F2303.12153.pdf
 
 
-[3] Lin, Kevin, et al. “Text2motion: From natural language instructions to feasible plans.” arXiv preprint arXiv:2303.12153 (2023).
 
-[4] Sharma, Pratyusha, et al. “Correcting robot plans with natural language feedback.” arXiv preprint arXiv:2204.05186 (2022). 
+
+## [4] Sharma, Pratyusha, et al. “Correcting robot plans with natural language feedback.” arXiv preprint arXiv:2204.05186 (2022). 
 
 
 
